--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ django-cors-headers==4.3.0
 django-filter==23.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+gunicorn==21.2.0
+packaging==23.2
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pytz==2023.3.post1
